# DeepLearningPython

./: README.md  pyproject.toml
notebooks/: colab_demo.ipynb
scripts/windows/: demo.bat  train.bat
src/deeplearning_python/: __init__.py  checkpoints.py  cli.py  data.py  metrics.py  models.py  notebook.py  training.py  visualization.py
tests/: test_cli.py  test_models.py  test_notebook.py  test_visualization.py
