[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplearning-python"
version = "0.1.0"
description = "Interactive classroom training demos for Neural Networks and Deep Learning"
authors = [{ name = "Classroom Team" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "rich>=13.7",
  "typer[all]>=0.9",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.scripts]
dlp = "deeplearning_python.cli:main"
